<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/movie_list_fragment">

    <fragment
        android:id="@+id/maps_fragment"
        android:name="com.shinhaedam.kotlinmoviereviewapp.maps.MapsFragment"
        android:label="@string/maps_fragment"
        tools:layout="@layout/fragment_maps" >
    </fragment>

    <fragment
        android:id="@+id/movie_list_fragment"
        android:name="com.shinhaedam.kotlinmoviereviewapp.movielist.MovieListFragment"
        android:label="@string/movie_list_fragment"
        tools:layout="@layout/fragment_movie_list" >
        <action
            android:id="@+id/action_movieListFragment_to_movieInfoFragment"
            app:destination="@id/movie_info_fragment" />
        <action
            android:id="@+id/action_movieListFragment_to_mapsFragment"
            app:destination="@+id/maps_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/maps_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/movie_info_fragment"
        android:name="com.shinhaedam.kotlinmoviereviewapp.movieinfo.MovieInfoFragment"
        android:label="@string/movie_info_fragment"
        tools:layout="@layout/fragment_movie_info" >
        <argument
            android:name="movieKey"
            app:argType="long"/>
        <action
            android:id="@+id/action_movieInfoFragment_to_addReviewFragment"
            app:destination="@id/add_review_fragment" />
        <action
            android:id="@+id/action_movieInfoFragment_to_movieListFragment"
            app:destination="@id/movie_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/add_review_fragment"
        android:name="com.shinhaedam.kotlinmoviereviewapp.addreview.AddReviewFragment"
        android:label="@string/add_review_fragment"
        tools:layout="@layout/fragment_add_review" >
        <argument
            android:name="movieKey"
            app:argType="long"/>
        <action
            android:id="@+id/action_addReviewFragment_to_movieInfoFragment"
            app:destination="@id/movie_info_fragment" />
    </fragment>


</navigation>