<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movieListViewModel"
            type="com.shinhaedam.kotlinmoviereviewapp.movielist.MovieListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".movielist.MovieListFragment">

        <TextView
            android:id="@+id/movie_opening_date"
            android:layout_width="106dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/movie_opening_date"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/selected_gray_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/movie_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/movie_title"
            />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/selected_gray_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/movie_list"
            app:layout_constraintStart_toEndOf="@+id/movie_opening_date"
            app:layout_constraintEnd_toStartOf="@+id/movie_genre"
            />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="106dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/movie_genre"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="@color/selected_gray_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/movie_list"
            app:layout_constraintStart_toEndOf="@+id/movie_title"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_movie_list"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="96dp" />

        <Button
            android:id="@+id/correct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> movieListViewModel.onFindTheater()}"
            android:text="@string/find_theater"
            android:theme="@style/normalButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:layout_editor_absoluteX="151dp"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>